vlib/v/checker/tests/import_symbol_empty.out
vlib/v/checker/tests/import_symbol_empty.vv:1:12: error: empty `os` import set, remove `{}`
    1 | import os {}
      |            ^
